WiFi auto-reconnect and reboot

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,17 +22,19 @@ monitor_filters = esp32_exception_decoder
 platform_packages = platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#1.0.6
 board_build.partitions = min_spiffs.csv
 
-[env:esp-wrover-debug]
-board = esp-wrover-ie-module
-build_type = debug
-build_flags =
-		-DCORE_DEBUG_LEVEL=3
-    ; -DBOARD_HAS_PSRAM
-		; -mfix-esp32-psram-cache-issue
-		-DLOG_LOCAL_LEVEL=ESP_LOG_INFO
+; [env:esp-wrover-debug]
+; board = esp-wrover-ie-module
+; build_type = debug
+; build_flags =
+; 		-DCORE_DEBUG_LEVEL=3
+;     ; -DBOARD_HAS_PSRAM
+; 		; -mfix-esp32-psram-cache-issue
+; 		-DLOG_LOCAL_LEVEL=ESP_LOG_INFO
 
 [env:esp-wrover]
 board = esp-wrover-ie-module
+upload_speed = 460800
+monitor_speed = 460800
 build_flags =
     ; -DBOARD_HAS_PSRAM
 		; -mfix-esp32-psram-cache-issue
@@ -41,6 +43,8 @@ build_flags =
 
 [env:esp32dev]
 board = esp32dev
+upload_speed = 460800
+monitor_speed = 460800
 build_flags =
    ; -DBOARD_HAS_PSRAM
    ; -mfix-esp32-psram-cache-issue
